# chat_for_pp

./: Dockerfile  docker-compose.yml  pyproject.toml
app/: __init__.py  alembic.ini  main.py
app/alembic/: env.py
app/alembic/versions/: 2025_03_30_1436-efff7e6a7677_initial_migration.py  2025_04_22_1442-618910312847_make_datetime_timezone_aware.py  2025_04_22_1500-ad7a4250ee80_make_datetime_timezone_aware_to_user.py  2025_04_22_1510-d1c931fc5c9b_make_datetime_timezone_aware_to_user_all.py  2025_04_22_2340-21cccef84345_make_datetime_timezone_aware_for_chat_.py
app/api/api_v1/: auth.py  webchat.py
app/core/: config.py
app/db/: S3service.py  postgres_service.py
app/models/: base.py  chat.py  chat_member.py  db_helper.py  file.py  message.py  models.py  user.py
app/schemas/auth_schemas/: auth_requests.py  auth_responses.py
app/schemas/webchat_schemas/: webchat_responses.py
app/services/: auth_service.py  webchat_service.py  websocket_service.py
app/utils/: JWT.py  cookies.py  hashing.py
app/websocket/: websocket.py
