[tool.poetry]
name = "chat-for-pp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"  # Изменено с >= на ^ для совместимости
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.39"}
asyncpg = "^0.30.0"
alembic = "^1.15.1"
redis = "^5.2.1"
python-dotenv = "^1.0.1"
pydantic = "^2.10.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
websockets = "^15.0.1"
aiofiles = "^24.1.0"
pydantic-settings = "^2.8.1"
bcrypt = "3.2.2"
pyjwt = "^2.10.1"  # Исправлено с jwt на pyjwt
aiobotocore = "^2.21.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"